--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
 			</section>
 
 			<section class="section__2">
-				<div class="bloc_1">
-					<img src="" alt="" class="img__1">
+				<div class="bloc--1">
+					<img src="dist/images/toronto.jpg" alt="" class="img__1">
 					<h3>eddy pividor</h3>
-					<p>photographe</p>
-					<span>21 ans</span>
+					<span>photographe</span>
+					<p>21 ans</p>
 				</div>
-				<div class="bloc_2">
+				<div class="bloc--2">
 					<h2>
-						<span class="level_1"></span>
-						<span class="level_2"></span>
+						<span class="level_1">A propos</span>
+						<span class="level_2">2017</span>
 					</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
 				</div>
-				<div class="bloc_3">
-					<img src="" alt="" class="img__2">
+				<div class="bloc--3">
+					<img src="dist/images/camera.jpg" alt="" class="img__2">
 					<p>canon 6d</p>
 				</div>
 			</section>
@@ -85,15 +85,28 @@
 					<span class="level_1">portfolio</span>
 					<span class="level_2">2017</span>
 				</h2>
-				<img src="" alt="" class="img__3">
+				<img src="dist/images/go.jpg" alt="" class="img__3">
 				<div class="paragraph">
 					<h3>Portrait</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
-				</div>			
+				</div>	
+				<nav class="orientation">
+					<ul>
+						<li><a href="">Landscape</a></li>
+						<li><a href="">Architecture</a></li>
+						<li><a href="">Portrait</a></li>
+					</ul>
+				</nav>		
 			</section>
 
 			<section class="section__4">
-				
+				<nav class="orientation">
+					<ul>
+						<li><a href="">Landscape</a></li>
+						<li><a href="">Architecture</a></li>
+						<li><a href="">Portrait</a></li>
+					</ul>
+				</nav>					
 			</section>
 
 			<section class="section__5">
