--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 			<nav class="menu nav__left">
 				<p class="cross">✕</p>
 				<ul>
-					<li><a href="">home</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">about</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">portfolio</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">contact</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
+					<li><a href="">home</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a href="">about</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a href="">portfolio</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a href="">contact</a></li>
 				</ul>
 			</nav>
 			<nav class="menu nav__right">
@@ -54,12 +54,16 @@
 
 		<!-- MAIN -->
 		<main class="main">
+
 			<section class="section__1">
 				<div class="content">
 					<h1>eddy pividor</h1>
 					<a href="">a mystik world</a>					
 				</div>
+
+				<span class="pagination-bottom">01</span>
 			</section>
+
 
 			<section class="section__2">
 				<div class="bloc--1">
@@ -78,10 +82,14 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
 				</div>
 				<div class="bloc--3">
-					<img src="dist/images/camera.png" alt="" class="img__2">
+					<img src="dist/images/camera2.png" alt="" class="img__2">
 					<p>canon 6d</p>
 				</div>
+
+				<span class="pagination-bottom">02</span>
+				<span class="pagination-title">a propos</span>
 			</section>
+
 
 			<section class="section__3">
 				<h2>
@@ -91,7 +99,7 @@
 				<img src="dist/images/go.jpg" alt="" class="img__3">
 				<div class="paragraph">
 					<h3>Portrait</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi.</p>
 				</div>	
 				<nav class="orientation">
 					<ul>
@@ -99,25 +107,29 @@
 						<li><a href="">Architecture</a></li>
 						<li><a href="">Portrait</a></li>
 					</ul>
-				</nav>		
+				</nav>	
+
+				<span class="pagination-bottom">03</span>	
+				<span class="pagination-title">portfolio</span>
 			</section>
 
-			<section class="section__4">
 
+			<section class="section__4">
+				<h2 class="hidden">Hidden title</h2>
 				<div class="content">
 				    <!-- Swiper -->
 				    <div class="swiper-container">
 				        <div class="swiper-wrapper">
-				            <div class="swiper-slide"><img src="dist/images/slider/1.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/2.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/3.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/4.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/5.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/6.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/7.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/8.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/9.jpg"></div>
-				            <div class="swiper-slide"><img src="dist/images/slider/10.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/1.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/2.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/3.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/4.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/5.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/6.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/7.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/8.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/9.jpg"></div>
+				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/10.jpg"></div>
 				        </div>
 				    </div>	
 				        <!-- Add Pagination -->
@@ -133,7 +145,10 @@
 					</ul>
 				</nav>	
 
+				<span class="pagination-bottom">03</span>
+				<span class="pagination-title">portfolio</span>
 			</section>
+
 
 			<section class="section__5">
 				<div class="content">
@@ -142,16 +157,36 @@
 							<span class="level_1">contact me</span>
 						</h2>
 						<img src="dist/images/map.png" alt="">
+						<div class="text">
+							<p>paris</p>
+							<span>XII arrondissement</span>
+						</div>
 					</div>
 				</div>
+
+				<!-- FOOTER -->
+				<footer>
+					<p>Follow me on :</p>
+
+					<div class="social">
+						<a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>	
+					</div>
+
+					<p>Or send me an email :</p>
+
+					<a href="mailto:eddypividor@gmail.com" class="mailto">eddypividor@gmail.com</a>	
+				</footer>
+
+				<span class="pagination-bottom">04</span>
+				<span class="pagination-title">contact me</span>
 			</section>
 		</main>
 		<!-- FIN MAIN -->
 
-		<!-- FOOTER -->
-		<footer>
-			FOOTER
-		</footer>
+
+
 
     <!-- Swiper JS -->
     <script src="helpers/Swiper-3.4.1/dist/js/swiper.min.js"></script>
