--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 			<nav class="menu nav__left">
 				<p class="cross">✕</p>
 				<ul>
-					<li><a href="">home</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
-					<li><a href="">about</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
-					<li><a href="">portfolio</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
-					<li><a href="">contact</a></li>
+					<li><a class="scrollTo" href=".section__1">home</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__2">about</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__3">portfolio</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__4">contact</a></li>
 				</ul>
 			</nav>
 			<nav class="menu nav__right">
@@ -120,16 +120,18 @@
 				    <!-- Swiper -->
 				    <div class="swiper-container">
 				        <div class="swiper-wrapper">
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/1.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/2.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/3.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/4.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/5.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/6.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/7.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/8.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/9.jpg"></div>
-				            <div class="swiper-slide"><img  alt="" src="dist/images/slider/10.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s1.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s2.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/1.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/2.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/3.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/4.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/5.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/6.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/7.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/8.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/9.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/10.jpg"></div>
 				        </div>
 				    </div>	
 				        <!-- Add Pagination -->
@@ -174,7 +176,7 @@
 						<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>	
 					</div>
 
-					<p>Or send me an email :</p>
+					<p class="send-email">Or send me an email :</p>
 
 					<a href="mailto:eddypividor@gmail.com" class="mailto">eddypividor@gmail.com</a>	
 				</footer>
