--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 		<!-- FAVICON -->
 		<link rel="shortcut icon" type="image/x-icon" href="../theme/images/.png">
 		
-		<!-- CDN -->
 
 		<!-- LOCAL CSS -->
+		<link rel="stylesheet" href="helpers/Swiper-3.4.1/dist/css/swiper.min.css">
 		<link rel="stylesheet" href="dist/css/fonts.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="dist/css/reset.css" type="text/css" media="screen">
 		<link rel="stylesheet" media="(min-width: 0px)" href="dist/css/mobile.css" />
 		<link rel="stylesheet" media="(min-width: 768px)" href="dist/css/tablet.css" />
 		<link rel="stylesheet" media="(min-width: 1024px)" href="dist/css/desktop.css" />
 
+		<!-- CDN -->
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 
@@ -39,10 +40,10 @@
 			<nav class="menu nav__left">
 				<p class="cross">✕</p>
 				<ul>
-					<li><a href="">home</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">about</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">portfolio</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
-					<li><a href="">contact</a><img src="dist/images/menu2.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__1">home</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__2">about</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__3">portfolio</a><img src="dist/images/menu3.png" class="block-img" alt="icon"></li>
+					<li><a class="scrollTo" href=".section__4">contact</a></li>
 				</ul>
 			</nav>
 			<nav class="menu nav__right">
@@ -53,19 +54,25 @@
 
 		<!-- MAIN -->
 		<main class="main">
+
 			<section class="section__1">
 				<div class="content">
 					<h1>eddy pividor</h1>
 					<a href="">a mystik world</a>					
 				</div>
+
+				<span class="pagination-bottom">01</span>
 			</section>
+
 
 			<section class="section__2">
 				<div class="bloc--1">
 					<img src="dist/images/toronto.jpg" alt="" class="img__1">
-					<h3>eddy pividor</h3>
-					<span>photographe</span>
-					<p>21 ans</p>
+					<div class="content">
+						<h3>eddy pividor</h3>
+						<span>photographe</span>
+						<p>21 ans</p>						
+					</div>
 				</div>
 				<div class="bloc--2">
 					<h2>
@@ -75,10 +82,14 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
 				</div>
 				<div class="bloc--3">
-					<img src="dist/images/camera.jpg" alt="" class="img__2">
+					<img src="dist/images/camera2.png" alt="" class="img__2">
 					<p>canon 6d</p>
 				</div>
+
+				<span class="pagination-bottom">02</span>
+				<span class="pagination-title">a propos</span>
 			</section>
+
 
 			<section class="section__3">
 				<h2>
@@ -88,7 +99,7 @@
 				<img src="dist/images/go.jpg" alt="" class="img__3">
 				<div class="paragraph">
 					<h3>Portrait</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi. Vestibulum tellus nisl, volutpat posuere convallis non, porta ac purus. Sed finibus arcu justo, at volutpat odio eleifend ut.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor nisi.</p>
 				</div>	
 				<nav class="orientation">
 					<ul>
@@ -96,29 +107,104 @@
 						<li><a href="">Architecture</a></li>
 						<li><a href="">Portrait</a></li>
 					</ul>
-				</nav>		
+				</nav>	
+
+				<span class="pagination-bottom">03</span>	
+				<span class="pagination-title">portfolio</span>
 			</section>
 
+
 			<section class="section__4">
+				<h2 class="hidden">Hidden title</h2>
+				<div class="content">
+				    <!-- Swiper -->
+				    <div class="swiper-container">
+				        <div class="swiper-wrapper">
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s1.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s2.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/1.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/2.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/3.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/4.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/5.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/6.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/7.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/8.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/9.jpg"></div>
+				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/10.jpg"></div>
+				        </div>
+				    </div>	
+				        <!-- Add Pagination -->
+				        <div class="swiper-button-prev" role="button"><p>prev</p></div>
+	    				<div class="swiper-button-next" role="button"><p>next</p></div>			
+				</div>
+
 				<nav class="orientation">
 					<ul>
 						<li><a href="">Landscape</a></li>
 						<li><a href="">Architecture</a></li>
 						<li><a href="">Portrait</a></li>
 					</ul>
-				</nav>					
+				</nav>	
+
+				<span class="pagination-bottom">03</span>
+				<span class="pagination-title">portfolio</span>
 			</section>
 
+
 			<section class="section__5">
-				
+				<div class="content">
+					<div class="contact_me">
+						<h2>
+							<span class="level_1">contact me</span>
+						</h2>
+						<img src="dist/images/map.png" alt="">
+						<div class="text">
+							<p>paris</p>
+							<span>XII arrondissement</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- FOOTER -->
+				<footer>
+					<p>Follow me on :</p>
+
+					<div class="social">
+						<a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>	
+					</div>
+
+					<p class="send-email">Or send me an email :</p>
+
+					<a href="mailto:eddypividor@gmail.com" class="mailto">eddypividor@gmail.com</a>	
+				</footer>
+
+				<span class="pagination-bottom">04</span>
+				<span class="pagination-title">contact me</span>
 			</section>
 		</main>
 		<!-- FIN MAIN -->
 
-		<!-- FOOTER -->
-		<footer>
-			FOOTER
-		</footer>
+
+
+
+    <!-- Swiper JS -->
+    <script src="helpers/Swiper-3.4.1/dist/js/swiper.min.js"></script>
+
+    <script>
+    var swiper = new Swiper('.swiper-container', {
+        pagination: '.swiper-pagination',
+        direction: 'vertical',
+        slidesPerView: 1,
+        paginationClickable: false,
+        spaceBetween: 30,
+        mousewheelControl: true,
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev'
+    });
+    </script>
 		<!-- FIN FOOTER -->
 	</body>
 </html>
