--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
 				    <!-- Swiper -->
 				    <div class="swiper-container">
 				        <div class="swiper-wrapper">
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s1.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/s2.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/1.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/2.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/3.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/4.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/5.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/6.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/7.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/8.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/9.jpg"></div>
-				            <div class="swiper-slide"><p>Camille</p><img  alt="" src="dist/images/slider/10.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/s1.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/s2.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/1.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/2.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/3.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/4.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/5.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/6.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/7.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/8.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/9.jpg"></div>
+				            <div class="swiper-slide"><p class="title-name">Camille</p><img  alt="" src="dist/images/slider/10.jpg"></div>
 				        </div>
 				    </div>	
 				        <!-- Add Pagination -->
